# blueprint-dsl

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  gate.sh  pyproject.toml
.github/workflows/: gate.yml
docs/: blueprint.html  output-rendering.md  standard-output-schemas.md
src/blueprint_dsl/: __init__.py  compiler.py  render.py
tests/: test_compiler.py  test_public_api.py  test_render.py
